--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -32,7 +32,12 @@
   .css-invert {
     @apply invert-[50%] brightness-200;
   }
-
+  .heading {
+    @apply uppercase text-cyan-300 relative text-center text-[13px] before:content-[''] before:absolute before:right-0  before:-top-0 before:to-cyan-300/50 before:bg-gradient-to-l before:from-cyan-300/10  before:w-[50px] before:h-[3px] before:rounded-2xl tracking-wide;
+  }
+  .headingAdmin {
+    @apply relative before:content-[""] before:absolute before:-left-2 before:top-[50%] before:-translate-y-1/2 before:h-[1rem] before:w-[0.2rem] before:bg-gradient-to-b before:from-[rgba(132,90,223,0.5)] before:to-[rgba(35,183,229,0.5)] before:rounded-[0.5rem];
+  }
   .input-auth {
     @apply w-full border dark:border-white dark:text-white text-black border-black rounded-md;
   }
