update 19 files, delete 1 file and create 1 file

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -32,7 +32,9 @@
 #modal-root {
   /* Adjust width and height as needed */
 }
-
+.MuiPagination-text {
+  color: #ccc;
+}
 .slider-thumb::-webkit-slider-thumb {
   appearance: none;
   width: 25px;
